--- a/app/src/main/res/layout/tabletlayout_lg8.xml
+++ b/app/src/main/res/layout/tabletlayout_lg8.xml
@@ -172,7 +172,7 @@
             android:layout_width="fill_parent"
             android:layout_height="260dp"
 
-            mapbox:accessToken="pk.eyJ1Ijoic2hhbnRhbnV2IiwiYSI6ImNpZmZ0NTMzZzh4YTJyeWx4azhiZ2toMzUifQ.juDMFHzZybMwwO1C4DUN1A"
+            />/mapbox:accessToken="pk.eyJ1Ijoic2hhbnRhbnV2IiwiYSI6ImNpZmZ0NTMzZzh4YTJyeWx4azhiZ2toMzUifQ.juDMFHzZybMwwO1C4DUN1A"
             mapbox:mapid="shantanuv.nkob79p0"
             />
 
