--- a/app/src/main/res/layout/tabletlayout.xml
+++ b/app/src/main/res/layout/tabletlayout.xml
@@ -14,9 +14,7 @@
         android:gravity="center_horizontal|center_vertical"
         android:text="TeleOp Panel"
         android:textSize="25dp"
-    android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/refreshMap"
-        android:layout_toStartOf="@+id/refreshMap" />
+    android:layout_alignParentTop="true" />
 
 
 
@@ -307,17 +305,7 @@
             android:layout_alignStart="@+id/rudderBarTextView"
             android:layout_above="@+id/savewpbutton" />
 
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Set Home"
-            android:id="@+id/sethome"
-            android:textOff="Set Home"
-            android:textOn="Set Home"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/waypointButton"
-            android:layout_toEndOf="@+id/waypointButton"
-            android:layout_alignBottom="@+id/waypointButton" />
+
 
 
     </RelativeLayout>
@@ -373,65 +361,27 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save Map"
-        android:id="@+id/saveMap"
-        android:layout_alignTop="@+id/relativeLayout2"
-        android:layout_toRightOf="@+id/autonomousBox"
-        android:layout_toEndOf="@+id/autonomousBox" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Load Map"
-        android:id="@+id/loadMap"
-        android:layout_alignBottom="@+id/saveMap"
-        android:layout_toRightOf="@+id/saveMap"
-        android:layout_toEndOf="@+id/saveMap" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="Remove"
         android:id="@+id/removeMap"
-        android:layout_toRightOf="@+id/loadMap"
-        android:layout_below="@+id/loadMap" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Refresh"
-        android:id="@+id/refreshMap"
-        android:layout_toRightOf="@+id/loadMap"
-        android:layout_toEndOf="@+id/loadMap"
-        android:layout_alignTop="@+id/loadMap" />
+        android:layout_alignBottom="@+id/relativeLayout2"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@+id/log" />
 
     <ProgressBar
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
-        android:layout_alignLeft="@+id/saveMap"
-        android:layout_alignStart="@+id/saveMap"
-        android:layout_below="@+id/saveMap"
-        android:layout_alignRight="@+id/loadMap"
-        android:layout_marginTop="15dp" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gohome"
-        android:src="@drawable/home1"
-        android:layout_alignBottom="@+id/relativeLayout2"
-        android:layout_alignRight="@+id/refreshMap"
-        android:layout_alignEnd="@+id/refreshMap" />
+        android:layout_marginTop="15dp"
+        android:layout_alignTop="@+id/relativeLayout2" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:id="@+id/drawPolygon"
-        android:layout_alignBottom="@+id/gohome"
-        android:layout_toLeftOf="@+id/gohome" />
+        android:layout_toRightOf="@+id/removeMap"
+        android:layout_alignBottom="@+id/relativeLayout2" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -440,9 +390,9 @@
         android:text="Advanced Options"
         android:id="@+id/advopt"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/saveMap"
         android:layout_above="@+id/printIpAddress"
-        android:layout_toRightOf="@+id/saveMap" />
+        android:layout_toEndOf="@+id/autonomousBox"
+        android:layout_toRightOf="@+id/autonomousBox" />
 
 
     <!--     <Button
