--- a/app/src/main/res/layout/tabletlayout.xml
+++ b/app/src/main/res/layout/tabletlayout.xml
@@ -397,7 +397,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="makeconvex"
+        android:text="clear"
         android:id="@+id/makeconvex"
         android:layout_alignBottom="@+id/drawPolygon"
         android:layout_toRightOf="@+id/drawPolygon"
