--- a/app/src/main/res/layout/tabletlayout.xml
+++ b/app/src/main/res/layout/tabletlayout.xml
@@ -4,6 +4,7 @@
     android:id="@+id/linlay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:orientation="vertical">
 
     <TextView
@@ -14,6 +15,8 @@
         android:gravity="center_horizontal|center_vertical"
         android:text="TeleOp Panel"
         android:textSize="25dp"
+        android:layout_weight = "0.1"
+
         android:layout_alignParentTop="true" />
 
 
@@ -21,21 +24,22 @@
     <TextView
         android:id="@+id/printIpAddress"
         android:layout_width="match_parent"
-        android:layout_height="28dp"
+        android:layout_height="wrap_content"
+
         android:layout_gravity="center"
         android:gravity="center_horizontal|center_vertical"
         android:text="IP Address:"
         android:textColor="@color/green"
         android:background="@color/cyan"
         android:layout_below="@+id/controlScreenEnter"/>
-    android:layout_alignParentStart="true" />
+
 
     <RelativeLayout
         android:layout_width="200dp"
         android:layout_height="wrap_content"
 
-        android:id="@+id/relativeLayout3"
-        android:layout_alignBottom="@+id/relativeLayout"
+        android:id="@+id/relativeLayout_sensor"
+        android:layout_alignBottom="@+id/relativeLayout_map"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
@@ -152,19 +156,21 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/relativeLayout"
+        android:id="@+id/relativeLayout_map"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
+        android:layout_weight="0.5"
+
 
         android:layout_below="@+id/printIpAddress"
 
-        android:layout_toRightOf="@+id/relativeLayout3"
-        android:layout_toEndOf="@+id/relativeLayout3">
+        android:layout_toRightOf="@+id/relativeLayout_sensor"
+        android:layout_toEndOf="@+id/relativeLayout_sensor">
 
         <com.mapbox.mapboxsdk.views.MapView
             android:id="@+id/mapview"
             android:layout_width="fill_parent"
-            android:layout_height="400dp"
+            android:layout_height="460dp"
 
             mapbox:access_token="pk.eyJ1IjoiemVzaGVuZ3giLCJhIjoiY2loeHRjb3J2MDNleHQ1a2hpaHNpdWg4biJ9._iGMxo0BrVJc39brlkzOew"
 
@@ -187,41 +193,47 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:paddingTop="10dp"
-        android:paddingLeft="30dp"
-        android:id="@+id/relativeLayout2"
+        android:paddingLeft="15dp"
+        android:paddingRight="10dp"
+        android:id="@+id/relativeLayout_control"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:focusableInTouchMode="false"
+        android:background="@drawable/border"
+        android:focusable="true"
+        android:layout_below="@+id/relativeLayout_map">
 
         <TextView
             android:id="@+id/thrustBarTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
+
             android:text="Thrust Bar"
             android:layout_toRightOf="@+id/joystickView"
-            android:layout_marginLeft="10dp" />
+
+            android:layout_alignParentTop="false"
+            android:paddingTop="0dp"
+            android:layout_above="@+id/rudderBarTextView" />
         <TextView
             android:id="@+id/getThrustProgress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
-            android:paddingLeft="20dp"
+            android:paddingLeft="15dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_toRightOf="@id/thrustBarTextView"
 
-            />
+            android:layout_alignTop="@+id/thrustBarTextView" />
 
         <TextView
             android:id="@+id/rudderBarTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
-            android:paddingLeft="10dp"
             android:text="Rudder Bar"
-            android:layout_below="@id/thrustBarTextView"
-            android:layout_toRightOf="@+id/joystickView"
-            android:layout_alignLeft="@+id/thrustBarTextView" />
+            android:layout_alignLeft="@+id/thrustBarTextView"
+            android:layout_above="@+id/Sswitch" />
 
         <TextView
             android:id="@+id/getRudderProgress"
@@ -229,71 +241,22 @@
             android:layout_height="wrap_content"
             android:text="0"
             android:paddingTop="20dp"
-            android:paddingLeft="17dp"
+            android:paddingLeft="15dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_toRightOf="@id/rudderBarTextView"
-            android:layout_below="@id/thrustBarTextView" />
+            android:layout_alignTop="@+id/rudderBarTextView" />
 
-        <Button
-            android:id="@+id/connectButton"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="500dp"
-            android:text="Connect"
-            >
 
-        </Button>
-
-        <ToggleButton
-            android:id="@+id/waypointButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textOn="Add Waypoint"
-            android:textOff="Add Waypoint"
-            android:layout_alignTop="@+id/connectButton"
-            android:layout_toRightOf="@+id/connectButton"
-            android:layout_toEndOf="@+id/connectButton" />
-        <Button
-            android:id="@+id/waypointStartButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Start Waypoints"
-
-            android:layout_below="@+id/connectButton"
-            android:layout_alignLeft="@+id/connectButton" />
-        <Button
-            android:id="@+id/waypointDeleteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delete All Waypoints"
-            android:layout_toRightOf="@+id/waypointStartButton"
-            android:layout_toEndOf="@+id/waypointStartButton"
-            android:layout_alignBottom="@+id/waypointStartButton" />
 
         <com.platypus.android.tablet.Joystick.JoystickView
             android:layout_width="165dp"
             android:layout_height="165dp"
             android:id="@+id/joystickView"
-            android:layout_marginBottom="20dp" />
+            android:layout_marginBottom="20dp"
+            android:layout_below="@+id/textView3"
+            android:layout_alignParentBottom="true" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save Waypoints"
-            android:id="@+id/savewpbutton"
-            android:layout_below="@+id/waypointStartButton"
-            android:layout_alignLeft="@+id/waypointStartButton"
-            android:layout_alignStart="@+id/waypointStartButton" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Load Waypoints"
-            android:id="@+id/loadwpbutton"
-            android:layout_below="@+id/waypointStartButton"
-            android:layout_toRightOf="@+id/savewpbutton"
-            android:layout_toEndOf="@+id/savewpbutton" />
 
         <Switch
             android:layout_width="wrap_content"
@@ -303,39 +266,38 @@
             android:checked="false"
             android:layout_alignLeft="@+id/rudderBarTextView"
             android:layout_alignStart="@+id/rudderBarTextView"
-            android:layout_above="@+id/savewpbutton" />
+            android:layout_alignBottom="@+id/joystickView"
+            />
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Manually Control"
+            android:id="@+id/textView3"
+
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="3dp"
+            android:textStyle="bold"
+            android:textSize="16dp" />
 
 
 
 
     </RelativeLayout>
 
-    <CheckBox
-        android:id="@+id/autonomousBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Auto"
-        android:checked="false"
-        android:layout_alignBottom="@+id/relativeLayout2"
-        android:layout_toEndOf="@+id/relativeLayout2"
-        android:layout_toRightOf="@+id/relativeLayout2" />
-    <TextView
-        android:id="@+id/log"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/autonomousBox"
-        android:layout_toRightOf="@+id/relativeLayout2"
-        android:text="Waypoint Status" />
-
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/relativeLayout"
-        android:layout_above="@+id/relativeLayout3"
-        android:layout_toLeftOf="@+id/relativeLayout"
-        android:layout_toStartOf="@+id/relativeLayout"
-        android:id="@+id/relativeLayout4"
-        android:layout_alignLeft="@+id/relativeLayout3">
+        android:layout_alignTop="@+id/relativeLayout_map"
+        android:layout_above="@+id/relativeLayout_sensor"
+        android:layout_toLeftOf="@+id/relativeLayout_map"
+
+        android:id="@+id/relativeLayout_battery"
+        android:layout_alignLeft="@+id/relativeLayout_sensor">
 
         <TextView
             android:layout_width="wrap_content"
@@ -358,23 +320,6 @@
             android:layout_marginTop="20dp" />
     </RelativeLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remove"
-        android:id="@+id/removeMap"
-        android:layout_alignBottom="@+id/relativeLayout2"
-        android:layout_marginLeft="20dp"
-        android:layout_toRightOf="@+id/log" />
-
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:id="@+id/drawPolygon"
-        android:layout_toRightOf="@+id/removeMap"
-        android:layout_alignBottom="@+id/relativeLayout2" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -384,17 +329,175 @@
         android:id="@+id/advopt"
         android:layout_alignParentTop="true"
         android:layout_above="@+id/printIpAddress"
-        android:layout_toEndOf="@+id/autonomousBox"
-        android:layout_toRightOf="@+id/autonomousBox" />
-
+        android:layout_alignEnd="@+id/relativeLayout_map"
+        />
     <Button
-        android:layout_width="wrap_content"
+        style="?android:attr/buttonStyleSmall"
+        android:id="@+id/connectButton"
         android:layout_height="wrap_content"
-        android:text="clear"
-        android:id="@+id/makeconvex"
-        android:layout_alignBottom="@+id/drawPolygon"
-        android:layout_toRightOf="@+id/drawPolygon"
-        android:layout_toEndOf="@+id/drawPolygon" />
+        android:layout_width="wrap_content"
+
+        android:text="Connect"
+        android:layout_above="@+id/printIpAddress"
+        android:layout_toLeftOf="@+id/advopt"
+        />
+
+
+
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/relativeLayout_waypoint"
+        android:paddingTop="10dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/border"
+        android:layout_marginLeft="1dp"
+        android:layout_toRightOf="@+id/relativeLayout_control"
+        android:layout_alignTop="@+id/relativeLayout_control">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Waypoint"
+            android:id="@+id/textView4"
+
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="3dp"
+            android:textStyle="bold"
+            android:textSize="16dp" />
+
+
+        <ToggleButton
+            android:id="@+id/waypointButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textOn="Add Waypoint"
+            android:textOff="Add Waypoint"
+
+            android:layout_alignStart="@+id/textView4"
+            android:layout_above="@+id/waypointStartButton" />
+
+        <ToggleButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pause"
+            android:id="@+id/pause"
+            android:layout_alignBottom="@+id/waypointButton"
+            android:textOff="Pause Waypoint"
+            android:layout_alignParentTop="false"
+            android:layout_toRightOf="@+id/waypointButton"
+
+            android:textOn="Resume Waypoint" />
+        <Button
+            android:id="@+id/waypointStartButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start Waypoints"
+
+            android:layout_alignLeft="@+id/waypointButton"
+            android:layout_above="@+id/savewpbutton" />
+        <Button
+            android:id="@+id/waypointDeleteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete All Waypoints"
+            android:layout_toRightOf="@+id/waypointStartButton"
+            android:layout_toEndOf="@+id/waypointStartButton"
+            android:layout_alignBottom="@+id/waypointStartButton" />
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save Waypoints"
+            android:id="@+id/savewpbutton"
+            android:layout_alignLeft="@+id/waypointStartButton"
+            android:layout_alignStart="@+id/waypointStartButton"
+            android:layout_alignParentBottom="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Load Waypoints"
+            android:id="@+id/loadwpbutton"
+            android:layout_toRightOf="@+id/savewpbutton"
+            android:layout_toEndOf="@+id/savewpbutton"
+            android:layout_alignBottom="@+id/savewpbutton" />
+
+        <CheckBox
+            android:id="@+id/autonomousBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Auto"
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/log"
+            android:checked="false" />
+
+        <TextView
+            android:id="@+id/log"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/autonomousBox"
+            android:layout_toRightOf="@+id/waypointDeleteButton"
+            android:text="Waypoint Status" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/relativeLayout_area"
+        android:layout_toRightOf="@+id/relativeLayout_waypoint"
+        android:layout_alignEnd="@+id/relativeLayout_map"
+        android:layout_alignTop="@+id/relativeLayout_control"
+        android:paddingTop="10dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="10dp"
+        android:layout_marginLeft="1dp"
+        android:background="@drawable/border">
+
+        <TextView
+            android:id="@+id/area"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Area"
+
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="3dp"
+            android:textStyle="bold"
+            android:textSize="16dp" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Remove"
+            android:id="@+id/removeMap"
+            android:layout_above="@+id/drawPolygon"
+            android:layout_alignStart="@+id/area"/>
+
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/drawPolygon"
+            android:layout_above="@+id/makeconvex"
+            android:layout_alignStart="@+id/removeMap"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="clear"
+            android:id="@+id/makeconvex"
+            android:layout_alignParentBottom="true"
+
+            android:layout_alignStart="@+id/drawPolygon" />
+
+
+    </RelativeLayout>
 
 
     <!--     <Button
