Fixed lag due to marker update

--- a/app/src/main/res/layout/tabletlayout.xml
+++ b/app/src/main/res/layout/tabletlayout.xml
@@ -437,7 +437,7 @@
             android:id="@+id/autonomousBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Auto"
+            android:text="Autonomy Allowed"
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/log"
             android:checked="false" />
