--- a/app/src/main/res/layout/tabletlayout.xml
+++ b/app/src/main/res/layout/tabletlayout.xml
@@ -257,9 +257,8 @@
             android:layout_width="165dp"
             android:layout_height="165dp"
             android:id="@+id/joystickView"
-            android:layout_marginBottom="20dp"
-            android:layout_below="@+id/textView3"
-            android:layout_alignParentBottom="true" />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
 
 
 
