--- a/app/src/main/res/layout/tabletlayout.xml
+++ b/app/src/main/res/layout/tabletlayout.xml
@@ -278,7 +278,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Manually Control"
+            android:text="Manual Control"
             android:id="@+id/textView3"
 
             android:layout_alignParentTop="true"
