--- a/app/src/main/res/layout/tabletlayout.xml
+++ b/app/src/main/res/layout/tabletlayout.xml
@@ -396,7 +396,8 @@
             android:layout_alignParentTop="false"
             android:layout_toRightOf="@+id/waypointButton"
 
-            android:textOn="Resume Waypoint" />
+            android:textOn="Resume Waypoint"
+            android:checked="false" />
         <Button
             android:id="@+id/waypointStartButton"
             android:layout_width="wrap_content"
