Added start region, and shrinking polygon code

--- a/app/src/main/res/layout/tabletlayout.xml
+++ b/app/src/main/res/layout/tabletlayout.xml
@@ -509,6 +509,15 @@
             android:layout_alignTop="@+id/removeMap"
             android:layout_toEndOf="@+id/removeMap" />
 
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start Region"
+            android:id="@+id/button"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/removeMap" />
+
 
     </RelativeLayout>
 
