--- a/app/src/main/res/layout/tabletlayout7inch.xml
+++ b/app/src/main/res/layout/tabletlayout7inch.xml
@@ -345,7 +345,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Start"
-            android:layout_toEnd="@+id/pause"
+            android:layout_toEndOf="@+id/pause"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true" />
         <Button
