--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -64,8 +64,11 @@
                 android:id="@+id/mapview"
                 android:layout_width="fill_parent"
                 android:layout_height="600dp"
+                mapbox:access_token="pk.eyJ1IjoicGxhdHlwdXNsbGMiLCJhIjoiY2lsM3p5bjJyM3U0N3Z5bTNxbmFpZXNwaSJ9.YWzXSt3aXtpoBrdMPmLE3Q"
+                mapbox:style_url="@string/style_mapbox_streets"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"/>
+
 
             <Button
                 style="?android:attr/buttonStyleSmall"
