--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -46,6 +46,7 @@
         android:layout_above="@+id/mapinfo">
 
 
+
     </LinearLayout>
 
     <RelativeLayout
@@ -166,7 +167,8 @@ android:layout_marginLeft="1dp"
     android:layout_alignEnd="@+id/relativeLayout_map"
     android:layout_below="@+id/relativeLayout_map"
     android:layout_toEndOf="@+id/relativeLayout_sensor"
-    android:layout_alignParentBottom="true">
+    android:layout_alignParentBottom="true"
+    android:layout_marginBottom="5dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -308,12 +310,6 @@ android:layout_marginLeft="1dp"
     <!--android:textSize="18dp"-->
 
 </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/border">
-
-    </RelativeLayout>
 
     <ToggleButton
 
@@ -336,7 +332,6 @@ android:layout_marginLeft="1dp"
         style="?android:attr/textAppearanceSmall"
         android:gravity="center_horizontal"
         android:paddingTop="15dp"
-        android:layout_marginBottom="2dp"
         android:paddingBottom="15dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
