--- a/app/src/main/res/layout/region_layout.xml
+++ b/app/src/main/res/layout/region_layout.xml
@@ -43,8 +43,9 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Remove"
+        android:text="Remove Last Waypoint"
         android:id="@+id/regIon_remove"
+        android:textAppearance="?android:attr/textAppearanceSmallInverse"
         android:layout_above="@+id/drawPolygon"
         android:layout_alignStart="@+id/area" />
 
@@ -77,6 +78,7 @@
             android:inputType="number"
             android:ems="5"
             android:text="5"
+            android:textAppearance="?android:attr/textAppearanceSmallInverse"
             android:id="@+id/region_transect"
             android:layout_marginLeft="10dp" />
 
