--- a/app/src/main/res/layout/region_layout.xml
+++ b/app/src/main/res/layout/region_layout.xml
@@ -29,8 +29,8 @@
             android:textOff="Spiral"
             android:textOn="LawnMower"
             android:id="@+id/region_spiralorlawn"
-            android:layout_gravity="center_horizontal"
-            android:checked="false" />
+            android:layout_gravity="center_horizontal"/>
+
 
         <Button
         android:layout_width="match_parent"
