minor layout fix

--- a/app/src/main/res/layout/waypoint_layout.xml
+++ b/app/src/main/res/layout/waypoint_layout.xml
@@ -9,7 +9,13 @@
         android:orientation = "vertical"
         android:weightSum="1">
 
-    <Button
+        <ImageButton
+            android:id="@+id/waypointButton"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_height="wrap_content"/>
+
+        <Button
         style="?android:attr/buttonStyleSmall"
         android:id="@+id/waypointStartButton"
         android:layout_width="fill_parent"
@@ -24,10 +30,6 @@
         <!--android:layout_marginLeft="10dp"-->
         <!--android:layout_alignStart="@+id/removeMap" />-->
 
-    <ImageButton
-        android:id="@+id/waypointButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
         <!--android:textOn="Add Waypoints"-->
         <!--android:textOff="Add Waypoints"-->
         <!--android:checked="false"/>-->
