--- a/app/src/main/res/layout/region_layout.xml
+++ b/app/src/main/res/layout/region_layout.xml
@@ -7,6 +7,7 @@
         android:layout_height="fill_parent"
         android:orientation = "vertical">
     <ImageButton
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/region_draw"
@@ -15,6 +16,7 @@
         android:layout_alignStart="@+id/removeMap" />
 
     <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Start Region"
@@ -23,6 +25,7 @@
         android:layout_toEndOf="@+id/removeMap" />
 
         <ToggleButton
+            style="?android:attr/buttonStyleSmall"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Spiral"
@@ -33,6 +36,7 @@
 
 
         <Button
+            style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Perimeter"
@@ -56,9 +60,11 @@
         android:text="Clear"
         android:id="@+id/region_clear"
         android:layout_alignParentBottom="true"
+            style="?android:attr/buttonStyleSmall"
         android:layout_alignStart="@+id/drawPolygon" />
 
         <Button
+            style="?android:attr/buttonStyleSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Stop "
