--- a/app/src/main/res/layout/region_layout.xml
+++ b/app/src/main/res/layout/region_layout.xml
@@ -46,15 +46,6 @@
         android:layout_toEndOf="@+id/removeMap" />
 
 
-        <ToggleButton
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Additional Waypoint"
-            android:id="@+id/additionalWaypoint"
-            android:layout_gravity="center_horizontal"
-            android:checked="false" />
-
         <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -77,8 +68,13 @@
             android:layout_gravity="center_horizontal"
             android:text="Transect Distance"
             android:id="@+id/textView8"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="5dp" />
-
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -88,15 +84,17 @@
             android:text="5"
             android:textAppearance="?android:attr/textAppearanceSmallInverse"
             android:id="@+id/region_transect"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"/>
 
         <Button
-            style="?android:attr/buttonStyleSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Update Trasect"
+            android:layout_alignBottom="@id/region_transect"
+            android:layout_toRightOf="@id/region_transect"
+            android:text="↻"
             android:id="@+id/region_transectButton"
             android:layout_gravity="center_horizontal" />
-
+        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
