--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -86,11 +86,11 @@
         </RelativeLayout>
 
         <android.widget.VerticalSeekBar
-            android:id="@+id/seekBar1"
+            android:id="@+id/thrustSlider"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:progress="50" />        
+            android:progress="55" />
 
 
     </RelativeLayout>
