--- a/app/src/main/res/menu/dropdownmenu.xml
+++ b/app/src/main/res/menu/dropdownmenu.xml
@@ -37,5 +37,9 @@
         android:id="@+id/updateRate"
         android:title="Update Command Rate" />
 
+    <item
+        android:id="@+id/GrabSampler"
+        android:title="GrabSampler" />
+
 
 </menu>
